--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ justify-content: center;
 }
 .infos h2{
     font-size: 24px;
-    color:aliceblue;
+    color:rgb(255, 251, 252);
     margin-top: 10px;    
 }
 .infos p{
