--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     height: 100vh;
 }
 .foto {flex: 1;
-background-color:rgb(172, 85, 223);
+background-color:rgb(85, 223, 101);
 display:flex;
 align-items: center;
 justify-content: center;
@@ -38,3 +38,4 @@ justify-content: center;
     font-size: 18px;
     margin: 10px 0;
 }
+.socia
