--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: rgb(176, 107, 223);
+    background-color: rgb(190, 141, 223);
 }
 .inicio {
     display: flex;
     height: 100vh;
 }
 .foto {flex: 1;
-background-color:rgba(129, 30, 210, 0.806);
+background-color:rgba(168, 68, 249, 0.806);
 display:flex;
 align-items: center;
 justify-content: center;
@@ -63,7 +63,7 @@ justify-content: center;
 
 footer{
     background-color: aliceblue
-    color(srgb red green blue);
+    color(srgb red green rgb(4, 4, 35));
     text-align:center;
     padding: 20px;
 
