--- a/style.css
+++ b/style.css
@@ -74,3 +74,12 @@ footer p{
     font-size: 16px;
     font-weight: 500;
 }
+.sobre{ 
+    background-color: aliceblue;
+    color: white;
+}
+.experiencias{
+    background-color: aliceblue;
+    color: #000;
+
+}
