--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ footer p{
 
   /* Muda a cor de fundo da seção de início em telas menores (do cinza para #F4DECB) */
   .inicio{
-      background-color: #F4DECB;
+      background-color: #eacbf4;
   }
 
   /* Reduz o espaçamento interno destas seções em telas menores */
